--- a/html/user/message.html
+++ b/html/user/message.html
@@ -347,7 +347,7 @@
                     layer.msg('信息被删除', {icon: 2});
                     return
                 }
-                location.href = '../jie/detail.html?problemId=' + data
+                location.href = '../jie/detail.html?problemId=' + infoId
             }
             if (msgType == '3') {
                 console.log('回复');
