--- a/html/user/login.html
+++ b/html/user/login.html
@@ -1,75 +1,78 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>登入</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="keywords" content="达达问答">
-  <meta name="description" content="达达数据结构专业问答">
+    <meta charset="utf-8">
+    <title>登入</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="keywords" content="达达问答">
+    <meta name="description" content="达达数据结构专业问答">
     <link rel="stylesheet" href="../../res/layui/css/layui.css">
-  <link rel="stylesheet" href="../../res/css/global.css">
+    <link rel="stylesheet" href="../../res/css/global.css">
 </head>
 <body>
 
 <div class="fly-header layui-bg-black">
-  <div class="layui-container">
-      <a class="fly-logo" href="../index.html">
-          <img width="180" src="../../res/images/fao.png" alt="达达问答">
-      </a>
+    <div class="layui-container">
+        <a class="fly-logo" href="../index.html">
+            <img width="180" src="../../res/images/fao.png" alt="达达问答">
+        </a>
 
-      <ul class="layui-nav fly-nav-user">
-          <!-- 未登入的状态 -->
-          <li class="layui-nav-item">
-              <a class="iconfont icon-touxiang layui-hide-xs" href="login.html"></a>
-          </li>
-          <li class="layui-nav-item">
-              <a href="login.html">登入</a>
-          </li>
-          <li class="layui-nav-item">
-              <a href="reg.html">注册</a>
-          </li>
-      </ul>
-  </div>
+        <ul class="layui-nav fly-nav-user">
+            <!-- 未登入的状态 -->
+            <li class="layui-nav-item">
+                <a class="iconfont icon-touxiang layui-hide-xs" href="login.html"></a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="login.html">登入</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="reg.html">注册</a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <div class="layui-container fly-marginTop">
-  <div class="fly-panel fly-panel-user" pad20>
-    <div class="layui-tab layui-tab-brief" lay-filter="user">
-      <ul class="layui-tab-title">
-        <li class="layui-this">登入</li>
-        <li><a href="reg.html">注册</a></li>
-      </ul>
-      <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
-        <div class="layui-tab-item layui-show">
-          <div class="layui-form layui-form-pane">
-            <form method="post" action="/userAccount/login">
-                <div class="layui-form-item">
-                    <label for="L_phone" class="layui-form-label">账号</label>
-                    <div class="layui-input-inline">
-                        <input type="text" id="L_phone" name="username"   lay-verify="required" required
-                                 autocomplete="off"
-                               class="layui-input">
-                    </div>
-                </div>
-              <div class="layui-form-item">
-                <label for="L_pass" class="layui-form-label">密码</label>
-                <div class="layui-input-inline">
-                  <input type="password" id="L_pass" name="password" required lay-verify="required" autocomplete="off" class="layui-input">
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <button class="layui-btn" lay-filter="login" lay-submit>立即登录</button>
-                <span style="padding-left:20px;">
+    <div class="fly-panel fly-panel-user" pad20>
+        <div class="layui-tab layui-tab-brief" lay-filter="user">
+            <ul class="layui-tab-title">
+                <li class="layui-this">登入</li>
+                <li><a href="reg.html">注册</a></li>
+            </ul>
+            <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
+                <div class="layui-tab-item layui-show">
+                    <div class="layui-form layui-form-pane">
+                        <form method="post" action="/userAccount/login">
+                            <div class="layui-form-item">
+                                <label for="L_phone" class="layui-form-label">账号</label>
+                                <div class="layui-input-inline">
+                                    <input type="text" id="L_phone" name="username"
+                                           lay-verify="required" required
+                                           autocomplete="off"
+                                           class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <label for="L_pass" class="layui-form-label">密码</label>
+                                <div class="layui-input-inline">
+                                    <input type="password" id="L_pass" name="password" required
+                                           lay-verify="required" autocomplete="off"
+                                           class="layui-input">
+                                </div>
+                            </div>
+                            <div class="layui-form-item">
+                                <button class="layui-btn" lay-filter="login" lay-submit>立即登录
+                                </button>
+                                <span style="padding-left:20px;">
                   <a href="forget.html">忘记密码？</a>
                 </span>
-              </div>
-            </form>
-          </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 
 <div class="fly-footer">
@@ -79,12 +82,22 @@
 
 <script src="../../res/layui/layui.all.js"></script>
 <script>
-layui.config({
-  version: "3.0.0"
-  ,base: '../../res/mods/'
-}).extend({
-  fly: 'index'
-}).use('fly');
+    layui.config({
+        version: "3.0.0"
+        , base: '../../res/mods/'
+    }).extend({
+        fly: 'index'
+    }).use('fly', function () {
+        let $ = layui.jquery;
+        let username=localStorage.getItem('username');
+        let password=localStorage.getItem('password');
+        if (username) {
+            $('#L_phone').val(username)
+        }
+        if (password) {
+            $('#L_pass').val(password)
+        }
+    });
 </script>
 
 </body>
