--- a/html/jie/problem.html
+++ b/html/jie/problem.html
@@ -66,8 +66,7 @@
                     <cite class="layui-hide-xs">
                         <span class="layui-badge-dot"></span>
                     </cite>
-                    <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
-
+                    <img src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
                 </a>
                 <div id="tip-header-wrapper" style="display:none">
                     <span class="layui-badge-dot" style="right: -16px"></span>
@@ -112,7 +111,6 @@
 
 
                     <blockquote class="layui-elem-quote" id="problem-title">
-                        这个貌似不用多介绍，因为你已经在太多的地方都看到
                     </blockquote>
 
                     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
