--- a/html/user/set.html
+++ b/html/user/set.html
@@ -210,7 +210,7 @@
                                 <i class="layui-icon">&#xe67c;</i>上传头像
                             </button>
                             <img id="showAvatar"
-                                 src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg">
+                            src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
                             <span class="loading"></span>
                         </div>
                     </div>
