--- a/html/user/set.html
+++ b/html/user/set.html
@@ -210,7 +210,7 @@
                                 <i class="layui-icon">&#xe67c;</i>上传头像
                             </button>
                             <img id="showAvatar"
-                            src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
+                                 src="http://148.70.8.85/group1/M00/00/00/rBsAAlyd2OqAfMy_AAAGveq-234459.jpg">
                             <span class="loading"></span>
                         </div>
                     </div>
@@ -292,9 +292,12 @@
 
         // 设置个人信息
         function setUserInfomation(userInfo) {
+            $('#L_username').val(layui.cache.token.username);
+            if (!userInfo) {
+                return
+            }
             $('#L_userInfoId').val(userInfo.id);
             $('#L_phone').val(userInfo.telephone);
-            $('#L_username').val(layui.cache.token.username);
             $('[name=sex]').each(function (i, item) {
                 if ($(item).val() === userInfo.sex) {
                     $(item).prop('checked', true);
