--- a/html/user/set.html
+++ b/html/user/set.html
@@ -128,8 +128,7 @@
                         <div class="layui-form-item">
                             <label for="L_phone" class="layui-form-label">手机</label>
                             <div class="layui-input-inline">
-                                <input type="text" id="L_phone" name="phone" required=""
-                                       lay-verify="phone"
+                                <input type="text" id="L_phone"
                                        autocomplete="off"
                                        value=""
                                        class="layui-input"
